accept any newer version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ endif ()
     # set (HDF5_EXTERNALLY_CONFIGURED 1)
   # endif()
 # endif()
+set(HDF5_EXTERNALLY_CONFIGURED OFF)
 #-----------------------------------------------------------------------------
 # Instructions for use : Sub-Project Build
 #
